# Python_HW

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  pyproject.toml
homework_05/: pyproject.toml
homework_05/templates/: about.html  base.html  index.html
