[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["Stepanov Mikhail <volodya-stepanov-68@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.8.5"
SQLAlchemy = "1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
